welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
setCouleurBrosse(Couleur.bleux)
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()



